[FIX] spreadsheet(_dashboard): fix css of dashboard global filters
The CSS of global filters in dashboard was broken if there was too
many filters or if a filter was too tall (e.g. relation filter with
many options).

This commit fixes one of these issues. Now the filters are wrapped in
multiple lines if there are too many filters. That mean that we have
to define a fixed width for the filters, otherwise the filters won't be
aligned over multiple lines and will be ugly.

The commit also changes the style of the `Select period...` option to
be more placeholder-like.

The commit doesn't fix the issues that the filters can be too tall,
or that there can be too many lines. That's because in this version,
the Year Picker isn't a popover but a simple dropdown, thus is affected
by `overflow` and is broken if there is some present.

Task: 4624108

--- a/addons/spreadsheet_dashboard/static/src/bundle/dashboard_action/dashboard_action.scss
+++ b/addons/spreadsheet_dashboard/static/src/bundle/dashboard_action/dashboard_action.scss
@@ -55,10 +55,16 @@
 
     .o_cp_top_right {
         display: flex;
-        justify-content: flex-end;
         align-items: flex-start;
         flex: 4;
+        row-gap: 8px;
         min-width: 0;
+        flex-wrap: wrap;
+
+        .o_filter_value_container {
+            width: 235px;
+            padding-right: 18px;
+        }
 
         .o-filter-value {
             min-height: 25px;
